[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/figure_highlight.png" type="Texture" id=1]
[ext_resource path="res://sprites/figure_bar.png" type="Texture" id=2]
[ext_resource path="res://sprites/house_highlight.png" type="Texture" id=3]
[ext_resource path="res://scripts/FigureBar.gd" type="Script" id=4]

[node name="FigureBar" type="TextureRect"]
margin_right = 260.0
margin_bottom = 20.0
texture = ExtResource( 2 )
expand = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HouseHighlight" type="TextureRect" parent="."]
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="House" type="Label" parent="."]
margin_left = 1.0
margin_top = 4.0
margin_right = 17.0
margin_bottom = 18.0
text = "12"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = 26.0
margin_top = 3.0
margin_right = 136.0
margin_bottom = 17.0
text = "Caput Draconis"

[node name="Element" type="Label" parent="."]
margin_left = 160.0
margin_top = 4.0
margin_right = 176.0
margin_bottom = 18.0
text = "FA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Planet" type="Label" parent="."]
margin_left = 187.0
margin_top = 4.0
margin_right = 203.0
margin_bottom = 18.0
text = "FA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Zodiac1" type="Label" parent="."]
margin_left = 214.0
margin_top = 4.0
margin_right = 230.0
margin_bottom = 18.0
text = "FA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Zodiac2" type="Label" parent="."]
margin_left = 239.0
margin_top = 4.0
margin_right = 255.0
margin_bottom = 18.0
text = "FA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highlight" type="TextureRect" parent="."]
margin_left = -1.0
margin_top = -1.0
margin_right = 261.0
margin_bottom = 21.0
texture = ExtResource( 1 )
expand = true
